<resources>
    <string name="app_name">Notekeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">Notekeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="menu_import">Import</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communications">Communications</string>
    <string name="courses">Courses</string>
    <string name="notes">Notes</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="note_text_hint">Note text</string>
    <string name="note_title_hint">Note title</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">General</string>
    <string name="gugu">Gugu</string>
    <string name="notification_header">Notification</string>
    <string name="display_name">Display name</string>
    <string name="pref_default_email_address">yourname@yourhost.com</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_title_favourite_social">Favorite social network</string>
    <string name="title_add_friends_to_">Add friends to message</string>
    <string name="h">http://plus.google.com</string>
    <string name="pref_default_display_name">Your name</string>
    <string name="pref_default_favorite_social">http://plus.google.com</string>
    <string name="user_display_name">user_display_name</string>
    <string name="channel_name">Note Reminder</string>
    <string name="channel_description">Notes notification reminder</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

</resources>