<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference

        android:key="user_display_name"
        android:title="@string/display_name"
        app:defaultValue="@string/pref_default_display_name" />
    <EditTextPreference

        android:key="user_email_address"
        android:title="@string/pref_title_email_address"
        app:defaultValue="@string/pref_default_email_address"
        android:inputType="textEmailAddress"/>
    <ListPreference
        android:entries="@array/pref_entries_favorite_social"
        android:entryValues="@array/pref_values_favorite_social"
        android:key="user_favorite_social"
        android:title="@string/pref_title_favourite_social"
        app:defaultValue="@string/pref_default_favorite_social" />

</PreferenceScreen>
